--- a/src/FutureWeather.css
+++ b/src/FutureWeather.css
@@ -1,5 +1,5 @@
 .FutureWeather h2 {
-  margin-top: 2em;
+  margin-top: 1em;
   color: rgb(26, 25, 25);;
   margin-bottom: 0;
   font-size: 1.75em;
